Fix Invalid CORS request error by relaxing CORS allowed origins and headers